--- a/sts/vercel.json
+++ b/sts/vercel.json
@@ -18,7 +18,7 @@
         },
          {
           "src": "/[^.]+",
-          "dest": "/"
+          "dest": "/index.htmlerror: src refspec master does not match any"
         }
 ]
 }
