--- a/frontend/netlify.toml
+++ b/frontend/netlify.toml
@@ -6,4 +6,9 @@
     Access-Control-Allow-Origin="*"
     Access-Control-Allow-Methods="GET,POST,PUT,DELETE,OPTIONS"
     Access-Control-Allow-headers="Content-Type,Authorization,X-Requested-With"
+
+[[redirects]]
+  from="/*"
+  to="/index.html"
+  status=200
  
