--- a/frontend/netlify.toml
+++ b/frontend/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-      publish = "public"
+      publish = "dist"
 [[headers]]
   for = "/*"
   [headers.values]
@@ -7,8 +7,5 @@
     Access-Control-Allow-Methods="GET,POST,PUT,DELETE,OPTIONS"
     Access-Control-Allow-headers="Content-Type,Authorization,X-Requested-With"
 
-[[redirects]]
-  from="/*"
-  to="/index.html"
-  status=200
+
  
