--- a/sts/sts/.env
+++ b/sts/sts/.env
@@ -12,3 +12,5 @@ DB_PORT=5432
 
 EMAIL_HOST_USER=windersonrolles@gmail.com
 EMAIL_HOST_PASSWORD='ytwsmrqvkwrrhtig'
+
+`REACT_API_API_URL=https://isr-rh3l.onrender.com`
