--- a/sts/requirements.txt
+++ b/sts/requirements.txt
@@ -15,6 +15,7 @@ cryptography==43.0.1
 defusedxml==0.8.0rc2
 dill==0.3.8
 distlib==0.3.9
+dj-database-url==3.0.1
 dj-rest-auth==4.0.0
 Django==5.2.3
 django-admin-interface==0.28.6
@@ -91,6 +92,7 @@ psycopg==3.2.12
 psycopg-binary==3.2.12
 psycopg-pool==3.2.7
 psycopg2==2.9.9
+psycopg2-binary==2.9.11
 pycparser==2.22
 pydantic==2.12.3
 pydantic_core==2.41.4
@@ -107,6 +109,7 @@ pytest-fixture-order==0.1.4
 pytest-lambda==1.3.0
 pytest-reverse==1.7.0
 python-dateutil==2.9.0.post0
+python-decouple==3.8
 python-dotenv==1.0.1
 python-engineio==4.9.1
 python-multipart==0.0.9
